Show lock checkbox is now just an FA icon (either lock or unlock, depending) and is placed in the show name row instead of on a row below it. Passes my own UX testing, horizontal shifting is not an issue encountered as of this commit (except when overflow adds a scroll bar. However, zooming out shows that the shift is merely the scrollbar in browser taking up right edge space).

--- a/app/javascript/packs/application.scss
+++ b/app/javascript/packs/application.scss
@@ -139,13 +139,49 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 6.6%;
+  //margin-left: 6.6%;
+  margin-left: 6.99%;
 }
 
 .episodes-flex > * {
   flex: 0 0 800px;
 }
 
+.show-label {
+  margin-left: 3%;
+}
+
+.form-lock input[type="checkbox"]{
+  display:none;
+}
+.form-lock input[type="checkbox"] + label.fa {
+  //color: #88E2E2;
+  //font-size: 25px;
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  margin-left: 10%;
+  margin-right: -10%;
+}
+.form-lock input[type="checkbox"]:checked +label.fa{
+  background: #fff;
+  //background: inherit;
+}
+.form-lock input[type="checkbox"] + label.fa:before {
+  display: inline-block;
+  content: "\f09c";
+  cursor: pointer;
+
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: flipH();
+}
+
+.form-lock input[type="checkbox"]:checked +label.fa:before{
+  content: "\f023";
+}
 
 //}
 
